--- a/index.html
+++ b/index.html
@@ -314,13 +314,14 @@
             z-index: 1000;
             height: 1.5rem;
             line-height: 1.5rem;
+            overflow: hidden;
         }
 
         .vim-mode .mode-text {
             font-weight: bold;
             padding: 0.15rem 0.3rem;
             border-radius: 0;
-            margin: -0.15rem -0.5rem;
+            margin: 0 -0.5rem;
             display: inline-block;
             width: auto;
             min-width: 4rem;
@@ -352,7 +353,7 @@
             background-color: #e0e0e0;
             padding: 0.15rem 0.3rem;
             border-radius: 0;
-            margin: -0.15rem 0.5rem;
+            margin: 0 0.5rem;
             display: inline-block;
         }
 
