--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <div class="what-we-dont">
                 <h2 class="command">$ ./philosophy_check</h2>
                 <div class="interactive-section">
-                    <p class="note">Hint: You don't necessarily need to answer these questions. We are programmers ourselves at `therandom.company` and trust your ability to find hints within the source code (perhaps at a place like `github.com/therandomcompany`?).</p>
+                    <p class="note">Hint: You don't necessarily need to answer these questions. If you're a programmer, you might find hints within the source code (perhaps even at a place like `github.com/therandomcompnay`?). We welcome programmers.</p>
                     <div id="philosophyOutput" class="philosophy-output"></div>
                 </div>
             </div>
