--- a/index.html
+++ b/index.html
@@ -612,6 +612,28 @@
             </ul>
         </section>
 
+        <section class="section art" id="artSection">
+            <h2 class="command">$ ls art/</h2>
+            <div class="truth">
+                "Art is the purest form of randomness meeting curiosity. Here, we'll showcase our experiments in digital creation."
+            </div>
+            <p>Our art collection is currently in the process of creation. Each piece will be:</p>
+            <ul>
+                <li>
+                    <h3>Driven by Randomness</h3>
+                    <p>Every artwork will incorporate elements of controlled chaos, where randomness shapes the final form.</p>
+                </li>
+                <li>
+                    <h3>Guided by Curiosity</h3>
+                    <p>Each piece will explore the intersection of algorithmic serendipity and human curiosity.</p>
+                </li>
+                <li>
+                    <h3>Coming Soon</h3>
+                    <p>Our first collection is currently under development. Stay curious - random beauty is about to emerge.</p>
+                </li>
+            </ul>
+        </section>
+
         <section class="section goodbye" id="goodbyeSection" style="display: none;">
             <div class="truth">
                 "Goodbye! Our paths may cross again when you're ready to embrace true creation."
