--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             </ul>
         </section>
 
-        <section class="section art" id="artSection">
+        <section class="section art" id="artSection" style="display: none;">
             <h2 class="command">$ ls art/</h2>
             <div class="truth">
                 "Art is the purest form of randomness meeting curiosity. Here, we'll showcase our experiments in digital creation."
@@ -1396,6 +1396,7 @@
             const weAlwaysDoSection = document.getElementById('weAlwaysDoSection');
             const projectsSection = document.getElementById('projectsSection');
             const goodbyeSection = document.getElementById('goodbyeSection');
+            const artSection = document.getElementById('artSection');
             let currentIndex = 0;
             let isFirstQuestion = true;
 
@@ -1405,6 +1406,7 @@
                 weNeverDoSection.style.display = 'block';
                 weAlwaysDoSection.style.display = 'block';
                 projectsSection.style.display = 'block';
+                artSection.style.display = 'block';
                 return;
             }
             
@@ -1416,6 +1418,7 @@
                 weNeverDoSection.style.display = 'block';
                 weAlwaysDoSection.style.display = 'block';
                 projectsSection.style.display = 'block';
+                artSection.style.display = 'block';
                 localStorage.setItem('philosophyCheckPassed', 'true');
                 return;
             }
@@ -1432,6 +1435,7 @@
                     weNeverDoSection.style.display = 'block';
                     weAlwaysDoSection.style.display = 'block';
                     projectsSection.style.display = 'block';
+                    artSection.style.display = 'block';
                     localStorage.setItem('philosophyCheckPassed', 'true');
                     
                     // Enable Vim functionality
