--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
         </section>
 
         <section class="section art" id="artSection" style="display: none;">
-            <h2 class="command">$ ls art/</h2>
+            <h2 class="command">$ ls arts/</h2>
             <div class="truth">
                 "Art is the purest form of randomness meeting curiosity. Here, we'll showcase our experiments in digital creation."
             </div>
