--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
                         <p>Marketing funnels. Sales pitches. Competitive analysis. We reject your entire framework. Nothing in this world is truly comparable—we create our vision without forcing it on others.</p>
                     </li>
                     <li>
-                        <h3>Dance with VCs</h3>
-                        <p>We don't need advice from those who've never created. Your \"pattern matching\" is fear of the unknown, your advice comes with unwanted constraints. We dance only with those who create or dare to create, and deeply resonate with our vision.</p>
+                        <h3>Dance with Precedent Prisoners</h3>
+                        <p>Ah, the wise ones who say \"show me where it worked before.\" How brave of you to walk backwards into the future. We prefer those who dare to look ahead.</p>
                     </li>
                     <li>
                         <h3>Plan</h3>
@@ -1334,8 +1334,8 @@
                     expected: "n"
                 },
                 {
-                    question: "Do you want to dance with VCs?",
-                    text: "We don't need advice from those who've never created. Your \"pattern matching\" is fear of the unknown, your advice comes with unwanted constraints. We dance only with those who create or dare to create, and deeply resonate with our vision.",
+                    question: "Do you want to dance with Precedent Prisoners?",
+                    text: "Ah, the wise ones who say \"show me where it worked before.\" How brave of you to walk backwards into the future. We prefer those who dare to look ahead.",
                     expected: "n"
                 },
                 {
