--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
                         <p>We don't spend time explaining ourselves to those who won't understand. No pointless meetings, no unnecessary documentation. Our time is for creation, not justification.</p>
                     </li>
                     <li>
-                        <h3>Show Off</h3>
-                        <p>We don't dress up to please others. No vanity, no self-aggrandizing gestures. We focus on what matters—not what makes us look good to the world.</p>
+                        <h3>Dress Up for Likes</h3>
+                        <p>Oh look, another influencer's perfectly empty feed. If you need constant validation from strangers, this isn't your place. We create, not perform.</p>
                     </li>
                 </ul>
             </div>
@@ -1354,8 +1354,8 @@
                     expected: "n"
                 },
                 {
-                    question: "Do you want to show off?",
-                    text: "We don't dress up to please others. No vanity, no self-aggrandizing gestures. We focus on what matters—not what makes us look good to the world.",
+                    question: "Do you want to dress up for likes?",
+                    text: "Oh look, another influencer's perfectly empty feed. If you need constant validation from strangers, this isn't your place. We create, not perform.",
                     expected: "n"
                 },
                 {
